# leolock

./: .SRCINFO  .gitignore  CREATE.md  Cargo.toml  PKGBUILD  README-en.md  README.md  ROADMAP.md
.github/: RELEASE-GUIDE.md
.github/workflows/: build-packages.yml  release.yml
docs/: CHANGELOG.md  COMMANDS.md  CONFIGURATION.md  INSTALLATION.md  README.md  SECURITY.md  STRUCTURE.md  WARNINGS.md
examples/: config.toml
src/: config.rs  crypto.rs  errors.rs  fileops.rs  keymgmt.rs  lib.rs  main.rs  password.rs  utils.rs
