[package]
name = "leolock"
version = "1.0.2"
edition = "2021"
description = "LeoLock - 安全的文件加密解密工具"
authors = ["Burgess Leo <burgess@example.com>"]
license = "MIT"
repository = "https://github.com/burgessleo/leolock"

[package.metadata.deb]
maintainer = "Burgess Leo liuxiaopeng731@gmail.com"
copyright = "2026, Burgess Leo liuxiaopeng731@gmail.com"
license-file = ["LICENSE", "4"]
extended-description = "LeoLock - 安全的文件加密解密工具"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 { source = "target/release/leolock", dest = "/usr/bin/leolock", mode = "755" },
 { source = "README.md", dest = "/usr/share/doc/leolock/README", mode = "644", doc = true },
]

[package.metadata.generate-rpm]
assets = [
 { source = "target/release/leolock", dest = "/usr/bin/leolock", mode = "755" },
 { source = "README.md", dest = "/usr/share/doc/leolock/README", mode = "644", doc = true },
]
name = "leolock"
summary = "LeoLock - 安全的文件加密解密工具"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
argon2 = "0.5"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
rpassword = "7.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
dirs = "5.0"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
getrandom = "0.2"
sha2 = "0.10"
shellexpand = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
